--- a/css/nav.css
+++ b/css/nav.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
+    /* Prevent horizontal scrolling */
 }
 
 .navbar {
@@ -131,6 +133,8 @@ body {
         top: 60px;
         right: 0;
         width: 100%;
+        z-index: 1000;
+        /* Add this line */
     }
 
     .nav-links.active {
@@ -161,6 +165,9 @@ body {
         padding-left: 30px;
     }
 }
+
+
+
 
 /*futter*/
 
