--- a/css/softwarepage.css
+++ b/css/softwarepage.css
@@ -107,12 +107,12 @@ body {
 
 /* Responsive Design */
 @media (max-width: 768px) {
-    .card-container {
+    .soft-card-container {
         flex-direction: column;
         align-items: center;
     }
 
-    .card {
+    .soft-card {
         width: 100%;
         flex-direction: column;
         text-align: left;
@@ -122,13 +122,13 @@ body {
         /* Add spacing between cards */
     }
 
-    .card img {
+    .soft-card img {
         margin-bottom: 20px;
         width: 100%;
         height: auto;
     }
 
-    .card-content {
+    .soft-card-content {
         width: 100%;
     }
 
